bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:2: error: type mismatch;
 found   : Int(20)
 required: Boolean
  if (talking==true && 7<hour<20){
                              ^